--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss
@@ -45,4 +45,8 @@ arende-panel-svar {
       @extend %wc-typo-09;
     }
   }
+
+  .kompletterad .card {
+    padding: 20px 20px 0 !important;
+  }
 }
