--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
@@ -74,6 +74,7 @@ wc-fmb-panel-tab {
     margin-right: -21px;
     margin-bottom: -25px;
     background-color: $wc-color-28;
+    word-wrap: break-word;
     h4 {
       @extend %wc-typo-05;
       padding: 8px 0;
