INTYG-7321: Tempfix medan vi hittar lösning på jenkinsbygge.

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.scss
@@ -19,7 +19,7 @@
 
 uv-alert-value {
   display: block;
-  wc-alert-message {
+  uv-alert-message {
     padding-top: 5px;
     margin-bottom: 14px;  
   }
