--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -25,6 +25,7 @@
 
   // injector
   @import '../app-shared/unified-view/components/_variables.scss';
+  @import '../app-shared/unified-view/components/uvAlertMessage/uvAlertMessage.directive.scss';
   @import '../app-shared/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
   @import '../app-shared/unified-view/components/uvBooleanStatement/uvBooleanStatement.directive.scss';
   @import '../app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss';
