INTYG-7321: Permanent tillfällig fix cleanup.

--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertMessage/uvAlertMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvAlertMessage/uvAlertMessage.directive.scss
@@ -28,13 +28,7 @@ uv-alert-message {
     padding: 8px 9px 7px 38px;
     width: 100%;
 
-    a:hover {
-/*      color: $wc-color-07;*/
-    }
-    &.alert-komplettering {
-/*      background-color: $wc-color-02;
-      color: $wc-color-05;*/
-    }
+    /* see styling for wc-alert-message when fixing uv-alert-message styling in the future */
   }
 
 }
