--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -8,8 +8,9 @@
         <span id="viewCertificateHeader" dynamic-label key="modules.page-header.view-intyg.page-title"></span>
       </h1>
 
-      <mi-certificate-header-pageingress is-replaced="certMeta.isReplaced" default-message-key="luse.label.pageingress"
-                                         replaced-message-key="luse.label.pageingress.ersatt"></mi-certificate-header-pageingress>
+      <mi-certificate-header-pageingress is-replaced="certMeta.isReplaced"
+                                         default-message-key="luse.label.pageingress"
+                                         replaced-message-key="luse.label.pageingress.{{certMeta.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}"></mi-certificate-header-pageingress>
 
       <div uib-collapse="!isCollapsed1" class="collapse">
         <span dynamic-label key="modules.page-header.info.select-recipients-and-send"></span>
