--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -27,8 +27,9 @@
         <span dynamic-label id="viewCertificateHeader" key="modules.page-header.view-intyg.page-title"></span>
       </h1>
 
-      <mi-certificate-header-pageingress is-replaced="certMeta.isReplaced" default-message-key="ts-bas.label.pageingress"
-                                         replaced-message-key="ts-bas.label.pageingress.ersatt"></mi-certificate-header-pageingress>
+      <mi-certificate-header-pageingress is-replaced="certMeta.isReplaced"
+                                         default-message-key="ts-bas.label.pageingress"
+                                         replaced-message-key="ts-bas.label.pageingress.{{certMeta.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}"></mi-certificate-header-pageingress>
 
       <div uib-collapse="!isCollapsed1" class="collapse">
         <span dynamic-label key="modules.page-header.info.select-recipients-and-send.ts"></span>
