--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
@@ -1,5 +1,11 @@
-<div id="mi-certificate-replaced-warn" class="alert alert-warning" ng-if="certMetaModel.replacedBy">
-  <strong><span message key="certificates.events.ersatt.warn" params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
+<div id="mi-certificate-replaced-warn" class="alert alert-warning" ng-if="certMetaModel.isReplaced">
+  <strong>
+    <span message
+          key="certificates.events.{{certMetaModel.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}.warn.header"
+          params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
   </strong>
-  <br>Vårdgivaren kan ersätta ett intyg om till exempel intyget innehåller felaktig information, ny information tillkommit eller om Försäkringskassan begärt en komplettering och vården svarat med ett nytt intyg med de kompletterande uppgifterna.
+  <br>
+  <span message
+        key="certificates.events.{{certMetaModel.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}.warn.text"
+        params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
 </div>
