INTYG-7330: Konfigurerar uib-popover triggers via uibTooltipProvider default options istället för vid varje användning (löser också IE11 bug med kvarliggande tooltips vid knappclick)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -9,7 +9,7 @@
        <label ng-attr-for="fmb_diagnos_radio_{{d.diagnosKod}}"
               ng-class="{'disabled' :!d.hasInfo,  'active': d === vm.activeDiagnose}">
           <span uib-popover="{{!d.hasInfo ? 'Det finns inget FMB-stöd för den angivna diagnosen.' :''}}"
-                popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
+                 popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="top">{{d.diagnosBeskrivning}}</span>
         </label>
   </wc-radio-wrapper>
