--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpMark/wcHelpMark.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpMark/wcHelpMark.directive.html
@@ -1,3 +1,3 @@
-<span ng-if="showHelp == true" class="glyphicon glyphicon-question-sign" uib-popover-html="text" popover-trigger="mouseenter"
+<span ng-if="showHelp == true" class="glyphicon glyphicon-question-sign" uib-popover-html="text"
       popover-placement="{{placement}}" popover-popup-delay="300" popover-append-to-body="{{helpMarkAppendtobody}}">
 </span>
