--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
@@ -14,8 +14,9 @@
 
     <div class="col-xs-12 col-sm-6 body-col text-right">
       <button ng-if="onArchiveClick" type="button" ng-attr-id="archiveCertificateBtn-{{certMetaModel.id}}" class="btn btn-secondary"
-              ng-click="onArchiveClick({cert:certMetaModel})"
+              ng-click="onArchiveClick({cert:certMetaModel});archiveTooltipOpen=false;"
               uib-popover="{{messageService.getProperty('button.archive.tooltip')}}"
+              popover-is-open="archiveTooltipOpen"
               popover-popup-delay="300" popover-append-to-body="true" popover-placement="auto top">
         <i class="icon icon-box"></i> <span dynamic-label key="button.archive"></span>
       </button>
