INTYG-7364: Klick på expanderad wc-help-chevron-text yta skall inte toggla parent checkbox.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
@@ -1,4 +1,10 @@
-<div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()" class="wc-help-chevron__margin-bottom wc-help-chevron__arrow_box">
+<div uib-collapse="isCollapsed"
+     collapsing="start()"
+     expanding="start()"
+     collapsed="stop()"
+     expanded="stop()"
+     class="wc-help-chevron__margin-bottom wc-help-chevron__arrow_box"
+     ng-click="stopEvents($event)">
   <wc-bottom-fadeout color="28" class="wc-help-chevron__textarea">
     <span class="multiline" ng-bind-html="text"></span>
   </wc-bottom-fadeout>
