--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -8,7 +8,7 @@
     <li ng-class="{active: isFilterKomplettering}">
       <a ng-click="setFilterKomplettering(true)" id="arende-filter-kompletteringsbegaran">
         Kompletteringsbegäran
-        <span id="arende-kompletteringsbegaran-count" class="badge badge__stat" ng-if="viewState.intygProperties.isInteractionEnabled && unhandledKompletteringCount > 0">
+        <span id="arende-kompletteringsbegaran-count" class="badge badge__stat" ng-if="config.intygContext.isSigned && unhandledKompletteringCount > 0">
           {{unhandledKompletteringCount}}
         </span>
       </a>
@@ -16,7 +16,9 @@
     <li ng-class="{active: !isFilterKomplettering}">
       <a ng-click="setFilterKomplettering(false)" id="arende-filter-administrativafragor">
         Administrativa frågor
-        <span id="arende-administrativafragor-count" class="badge badge__stat" ng-if="viewState.intygProperties.isInteractionEnabled && unhandledAdministrativaFragorCount > 0">
+        <span id="arende-administrativafragor-count" class="badge badge__stat" 
+          ng-if="(viewState.intygProperties.isInteractionEnabled || config.intygContext.isSigned && unhandledKompletteringCount > 0) 
+                && unhandledAdministrativaFragorCount > 0">
           {{unhandledAdministrativaFragorCount}}
         </span>
       </a>
@@ -51,7 +53,7 @@
         <div ng-repeat="arendeListItem in viewState.arendeList | filter:kompletteringarFilter | orderBy:['-arende.senasteHandelse'] as kompletteringarList"
              class="arende-item">
           <arende-panel last-card="$last" panel-id="kompletteringar" arende-list-item="arendeListItem" arende-list="viewState.arendeList"
-               parent-view-state="viewState"></arende-panel>
+               parent-view-state="viewState" config="config"></arende-panel>
         </div>
 
         <wc-arende-no-kompletteringar-message ng-if="kompletteringarList.length === 0"></wc-arende-no-kompletteringar-message>
