--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYearPicker/ueYearPicker.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueYearPicker/ueYearPicker.directive.html
@@ -22,11 +22,12 @@
                    wc-blur-on-enter
                    ng-focus="focused()"
                    ue-year-only-parser
+                   wc-number="true"
                    uib-datepicker-popup="{{::format}}"
                    popup-placement="auto right"
                    show-button-bar="false"
                    datepicker-popup-template-url="/web/webjars/common/webcert/utkast/unified-edit/components/ueYearPicker/yearpickerPopup.template.html"
-                   datepicker-options="datePickerOptions" />
+                   datepicker-options="datePickerOptions"/>
 
             <span class="input-group-btn">
               <button type="button" id="{{::config.modelProp|ueDomIdFilter}}-toggle" class="btn btn-default"  ng-class="{border:isFocused}" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="material-icons">date_range</i></button>
