INTYG-6760: Lagt till grund för sysselsättning

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -136,6 +136,7 @@
   @import 'utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.scss';
   @import 'utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.scss';
   @import 'utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.scss';
+  @import 'utkast/unified-edit/components/ueDateInterval/ueDateInterval.directive.scss';
   @import 'utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakFoljd.scss';
   @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss';
