INTYG-7381: Lade till saknad ruta för komplettering med meddelande

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
@@ -49,6 +49,10 @@
   </div>
 
   <!-- Svarsdelen -->
+  <div ng-if="showAnswer() && !arendeSvar.answeredWithIntyg" class="kompletterad">
+    <wc-arende-komplettera-meddelande-confirmation arende-list="arendeList"></wc-arende-komplettera-meddelande-confirmation>
+  </div>
+
   <div ng-if="showAnswer() && !arendeSvar.answeredWithIntyg" class="arende-svar card">
     <div class="arende-block" ng-class="{'arende-block-handled': arendeSvar.status == 'CLOSED',
             'arende-block-fk' : (arendeSvar.frageStallare | lowercase) == 'wc',
