--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.scss
@@ -24,6 +24,10 @@ wc-help-tips-panel-tab {
     &.preformat {
       white-space: pre-line;
     }
+  }
 
+  .intyg-school-footer {
+    padding: 20px;
+    border-top: 1px solid $wc-color-15;
   }
 }
