INTYG-7511: Har med intygsversion i urlerna för ersätt och kompletterade intyg i mina intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
@@ -10,7 +10,7 @@
          ng-init="info = getEventInfo(event)" ng-attr-id="event-{{certId}}-{{$index}}"
          ng-class="{'event-row-tight': tightRows, 'event-row': !tightRows, 'stripe-dark': !tightRows && $even}" >
       <span ng-attr-id="event-timestamp-{{certId}}-{{$index}}" class="latest-events-timestamp">{{info.timestamp}}</span>
-      <latest-events-text class="event-text" ng-attr-id="event-text-{{::certId}}-{{::$index}}" text="info.text" view-cert="viewCert(type, id)"></latest-events-text>
+      <latest-events-text class="event-text" ng-attr-id="event-text-{{::certId}}-{{::$index}}" text="info.text" view-cert="viewCert(type, typeVersion, id)"></latest-events-text>
     </div>
   </div>
   <ng-include ng-if="showMoreButtonLocation === 'bottom'" src="'/web/webjars/common/minaintyg/components/latestEvents/latestEventsShowMoreButton.html'"></ng-include>
