--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
@@ -2,10 +2,10 @@
   <strong>
     <span message
           key="certificates.events.{{certMetaModel.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}.warn.header"
-          params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
+          params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type, certMetaModel.typeVersion]"></span>
   </strong>
   <br>
   <span message
         key="certificates.events.{{certMetaModel.replacedBy.relationKod == 'KOMPLT' ? 'kompletterat' : 'ersatt'}}.warn.text"
-        params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
+        params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type, certMetaModel.typeVersion]"></span>
 </div>
