--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvSimpleValue/uvSimpleValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvSimpleValue/uvSimpleValue.directive.html
@@ -2,7 +2,7 @@
   <h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}"
                                     dynamic-label key="{{ config.labelKey }}"></span></h4>
   <span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value">
-    <span class="multiline">{{::value}}</span>
+    <span class="multiline">{{::value}}{{::config.unit}}</span>
     <uv-no-value ng-if="!hasValue()"></uv-no-value>
   </span>
 </div>
