--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
@@ -5,10 +5,10 @@
 <wc-support-panel-scrollable-body dom-id="tips-panel-scrollable-body">
 
   <div>
-    <span class="module-title">{{vm.title}}</span><span class="module-issuer-type-id">{{vm.issuerTypeId}}</span>
+    <span class="module-title">{{vm.title}}</span><span class="module-issuer-type-id">{{vm.issuerTypeId}} <span id="module-intyg-type-version">{{vm.intygTypeVersion}}</span></span>
   </div>
   <div class="module-description" ng-if="!vm.aboutMsgKey" ng-bind-html="vm.moduleDescription"></div>
-  <div class="module-description preformat" ng-if="vm.aboutMsgKey"> <span dynamic-label key="{{::vm.aboutMsgKey}}"></span></div>
+  <div class="module-description preformat" ng-if="vm.aboutMsgKey"> <span dynamic-label key="{{::vm.aboutMsgKey}}" support-external-link="true"></span></div>
 
 
 </wc-support-panel-scrollable-body>
