--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -19,15 +19,17 @@
           'Välj enbart de svårigheter som påverkar patientens sysselsättning.' }}</span>
     </div>
     <div class="kategori-content">
-      <div ng-if="kategorier.gemensamma[getKodTyp()].centralaKoder.length > 0 ||
-                  kategorier.gemensamma[getKodTyp()].kompletterandeKoder.length > 0">
+      <div ng-if="kategorier.gemensamma[getKodTyp()] && (kategorier.gemensamma[getKodTyp()].centralaKoder.length > 0 ||
+                  kategorier.gemensamma[getKodTyp()].kompletterandeKoder.length > 0)">
         <span class="kategori-label">ICF-kategorier för:</span><br />
         <strong class="medborder">{{diagnosBeskrivningen(kategorier.gemensamma[getKodTyp()].icd10Koder)}}</strong>
         <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].centralaKoder" class="kategori"></ue-icf-kategori>
         <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].kompletterandeKoder" class="kategori"></ue-icf-kategori>
       </div>
 
-      <div ng-repeat="unika in kategorier.unika">
+      <div ng-repeat="unika in kategorier.unika"
+            ng-if="unika[getKodTyp()] && (unika[getKodTyp()].centralaKoder.length > 0 ||
+                   unika[getKodTyp()].kompletterandeKoder.length > 0)">
         <span class="kategori-label">ICF-kategorier för:</span><br />
         <strong class="medborder">{{diagnosBeskrivningen(unika.icd10Kod)}}</strong>
         <ue-icf-kategori kod="urval" ng-repeat="urval in unika[getKodTyp()].centralaKoder" class="kategori"></ue-icf-kategori>
@@ -42,7 +44,6 @@
                value="{{model[config.kategoriProp].length > 0 ? 'Uppdatera' : 'Lägg till'}}"
                ng-click="add(kategorier)" />
       <input type="button" class="btn btn-secondary kategori-rensa" value="Avbryt" ng-click="rensa()" ng-disabled="isInteractionDisabled()"/>
-        
       <a href="https://www.socialstyrelsen.se/klassificeringochkoder/koderfunktionstillstandicf" target="_blank">Läs mer
         om ICF hos Socialstyrelsen <i class="external-link-icon material-icons">launch</i></a>
     </div>
